@@ -1,6 +1,8 @@
 ChangeLog
 ==========
 
+- remove check for format of ID field in the input headers
+
 release 3.10
 - replace deprecated srpipe::runfolder by npg_pipeline::illumina::runfolder
 
